Updated to Gradle 8.5 and changed to the new way of publishing to Sonatype via the Vanniktech plugin

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,8 @@
 # What version of the Liquibase Gradle Plugin are we building?
-liquibaseGradlePluginVersion=3.0.2
+liquibaseGradlePluginVersion=3.0.3-SNAPSHOT
+
+# Do we want to do automatic releases of Maven artifacts when we publish?
+mavenCentralAutomaticPublishing=true
 
 # When we download a maven dependency, should we also get source files?
 downloadSources=false
