fix: configuration-cache friendly Activity DTO
Direct use of NamedDomainObjectContainer<Activity> as
task input may result in ConcurrentModificationException when Gradle configuration cache is enabled.

Provide a detached, serializable snapshot of an Activity configuration for task execution by converting NamedDomainObjectContainer<Activity> to configuration-cache-friendly properties.

--- a/.gitignore
+++ b/.gitignore
@@ -119,4 +119,5 @@ Desktop.ini
 # These are exception patterns that must come after the normal patterns.
 !gradle/wrapper/gradle-wrapper.jar
 !gradle/wrapper/gradle-wrapper.properties
+.history/
 
