Fix configuration cache compatibility (#176)
* add cc test

* add cc test

* delete unused test

* change the dependency scope for `liquibase-core` from `compileOnly` to `implementation`. The `compileOnly` scope was causing a `NoClassDefFoundError` at runtime because the Liquibase classes were not being packaged with the plugin. Using `implementation` ensures the library is available on the plugin's runtime classpath.

* enable JUnit 5 platform for tests

* refactor `ArgumentBuilder` and `LiquibaseTask` for configuration cache compatibility, capturing project-specific data at configuration time.

* refactor `ArgumentBuilder` and `LiquibaseTask` to utilize `PropertyProvider` for enhanced configuration cache compatibility.

* fix project.logger

* fix null password field

* update cc test

* update cc test

* add projectInfo

* change from an eager approach to a lazy one

* add `projectInfo` parameter to `buildLiquibaseArgs` and remove unnecessary `@Internal` annotations in `ProjectInfo`

* update some comments , delete the if condition , delete configArgumentBuilder as no need for it

* cc test update to junit

* Fix ArgumentBuilderTest to be compatible with `ProjectInfo`

* exclude `changelogParameters` from arguments

* remove ConfigurationCacheSpec and adjust liquibase-core dependency configuration

* change `classPath` type to `FileCollection`

* handling liquibaseChangelogParameters in ArgumentBuilder

* Add `LiquibaseInfo` class and replace `ProjectInfo` with `LiquibaseInfo` in `ArgumentBuilder` and in ArgumentBuilderTest

* Simplify `ProjectInfo` by removing unused fields

* Update `LiquibaseInfo` to use `Logger` instead of `Object` for type safety

* Bring back the CC integ test

---------

Co-authored-by: Rafael Chaves <rchaves@gradle.com>
Co-authored-by: Steven C. Saliman <stevesaliman@users.noreply.github.com>

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,8 @@ gradlePublishPluginVersion=1.1.0
 # Dependency versions
 #groovyVersion=2.4.12
 groovyVersion=3.0.13
+# Spock version 2.3 what works with Groovy version 3
+spockVersion=2.3-groovy-3.0
 #liquibaseCoreVersion=4.4.0
 liquibaseCoreVersion=4.27.0
 
