--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # What version of the Liquibase Gradle Plugin are we building?
-liquibaseGradlePluginVersion=3.1.0-SNAPSHOT
+liquibaseGradlePluginVersion=3.1.0
 
 # Do we want to do automatic releases of Maven artifacts when we publish?
 mavenCentralAutomaticPublishing=true
